--- a/AstroTracker/package.json
+++ b/AstroTracker/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
